# Zyro-Browser

./: .gitignore  CMakeLists.txt  Downloads.cpp  Globals.h  LICENSE  README.md  Security.h  Storage.h  main.cpp
Browser/: Browser.cpp  Browser.h
Downloads/: Downloads.h
Extensions/: Extension.cpp
Globals/: Globals.cpp  Globals.h
Security/: Blocker.cpp  Blocker.h  Security.cpp
Storage/: Storage.cpp  Storage.h
Utils/: Utils.cpp  Utils.h
assets/: about.html  app.html  bookmarks.html  downloads.html  history.html  home.html  passwords.html  settings.html  style.css  task_manager.html
